working navbard and default layout

--- a/assignments.html
+++ b/assignments.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Home
+title: Assignments
 ---
 
 <div class="container">
-	<p>Test Page</p>
+	<p>Assignments Pending</p>
 </div>
