--- a/schedule.html
+++ b/schedule.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Home
+title: Schedule
 ---
 
 <div class="container">
-	<p>Test Page</p>
+	<p>Schedule Pending</p>
 </div>
