--- a/syllabus.html
+++ b/syllabus.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Home
+title: Syllabus
 ---
 
 <div class="container">
-	<p>Test Page</p>
+	<p>Syllabus Pending</p>
 </div>
