initial index page and formatting for remaining pages

--- a/index.html
+++ b/index.html
@@ -4,5 +4,48 @@ title: Home
 ---
 
 <div class="container">
-	<p>Test Page</p>
+
+<h1 class="page-header">Principles of Software Development<br/>Fall 2021</h1>
+        
+	<br/>
+	<p class="lead">
+		<strong>Course Description</strong> 
+	</p>
+    <p>A study of software development. Software engineering principles and structured methods are discussed as a prelude to the focus on object-oriented approaches. All phases of the software lifecycle are covered, including analysis, design, implementation and testing, and maintenance. Other topics include user interface design and development, software reuse and the design of reusable software components, software patterns, and web-based client-server programming.
+    </p>
+
+    <p class="lead"><strong>Prerequisite</strong></p>
+
+    <p>Experience with an object-oriented programming language.</p>    
+
+	<p class="lead"><strong>Practice Assignments</strong></p>
+
+	<p>To sharpen your Java skills and make sure you are ready for CS 601 it is advised that you complete the following practice assignments. Start with Practice as it outlines how to set up your development environment for this class.</p>
+        <ul>
+			<li><a href="https://github.com/CS601-F21/Practice"> Practice</a></li>
+			<li><a href="https://github.com/CS601-F21/CarDBPractice">A Car Database</a></li>
+        </ul>
+        
+	<p>There are also lots of good practice problems you can find on the internet.</p>
+        <ul>
+			<li><a href="https://github.com/shekhargulati/99-problems/tree/master/java8">99 Problems on Github</a></li>
+			<li><a href="https://codingbat.com/java">Coding Bat</a></li>
+			<li><a href="https://leetcode.com/">Leet Code</a></li>
+        </ul>
+
+
+	<p class="lead"><strong>Resources</strong></p>  
+
+	<ul>
+        <li><a href="https://github.com/CS601-F21/notes/blob/master/admin/devenvironment.md">Setting up your development environment</a></li>
+        <li><a href="https://github.com/CS601-F21/notes/blob/master/admin/tips.md">General programming tips</a></li>
+        <li><a href="https://docs.oracle.com/en/java/javase/16/docs/api/index.html">Java API</a></li>        
+        <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Platform Download</a></li>
+        <li><a href="https://www.codecademy.com/learn/learn-java">Code Academy</a></li>
+        <li><a href="https://www.baeldung.com/java-tutorial">Baeldung Java Tutorials</a></li>
+<!--         <li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/Intro.md
+                ">Introductory Java Notes</a></li>
+ -->
+	</ul>
+
 </div>
