--- a/syllabus.html
+++ b/syllabus.html
@@ -4,5 +4,9 @@ title: Syllabus
 ---
 
 <div class="container">
+
+<h1 class="page-header">Syllabus<br/>Fall 2021</h1>
+        
+	<br/>	
 	<p>Syllabus Pending</p>
 </div>
