--- a/assignments.html
+++ b/assignments.html
@@ -4,5 +4,9 @@ title: Assignments
 ---
 
 <div class="container">
+<h1 class="page-header">Assignments<br/>Fall 2021</h1>
+        
+	<br/>
 	<p>Assignments Pending</p>
+
 </div>
