--- a/schedule.html
+++ b/schedule.html
@@ -4,5 +4,10 @@ title: Schedule
 ---
 
 <div class="container">
+
+<h1 class="page-header">Schedule<br/>Fall 2021</h1>
+        
+	<br/>
 	<p>Schedule Pending</p>
+	
 </div>
