--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@ title: Home
 <h1 class="page-header">Principles of Software Development<br/>Fall 2021</h1>
         
 	<br/>
-	<p class="lead">
-		<strong>Course Description</strong> 
-	</p>
+	<h4>Course Description</h4>
     <p>A study of software development. Software engineering principles and structured methods are discussed as a prelude to the focus on object-oriented approaches. All phases of the software lifecycle are covered, including analysis, design, implementation and testing, and maintenance. Other topics include user interface design and development, software reuse and the design of reusable software components, software patterns, and web-based client-server programming.
     </p>
 
-    <p class="lead"><strong>Prerequisite</strong></p>
+	<br/>
+    <h4>Prerequisite</h4>
 
     <p>Experience with an object-oriented programming language.</p>    
 
-	<p class="lead"><strong>Practice Assignments</strong></p>
+	<br/>
+	<h4>Practice Assignments</h4>
 
 	<p>To sharpen your Java skills and make sure you are ready for CS 601 it is advised that you complete the following practice assignments. Start with Practice as it outlines how to set up your development environment for this class.</p>
         <ul>
@@ -33,8 +33,8 @@ title: Home
 			<li><a href="https://leetcode.com/">Leet Code</a></li>
         </ul>
 
-
-	<p class="lead"><strong>Resources</strong></p>  
+	<br/>
+	<h4>Resources</h4>  
 
 	<ul>
         <li><a href="https://github.com/CS601-F21/notes/blob/master/admin/devenvironment.md">Setting up your development environment</a></li>
