full draft of site

--- a/assignments.html
+++ b/assignments.html
@@ -4,9 +4,115 @@ title: Assignments
 ---
 
 <div class="container">
+<br/>
 <h1 class="page-header">Assignments<br/>Fall 2021</h1>
-        
-	<br/>
-	<p>Assignments Pending</p>
+<hr/>        
+	<p><i>Note: deadlines are tentative and may be extended as circumstances necessitate.</i></p>	
+	
+  <h2>Projects</h2>
+  <table class="table table-condensed" style="text-align:left;">
+    <tbody>
+      <tr>
+       <td width="10%"><strong>Assignment</strong></td>
+       <td><strong>Description</strong></td>
+       <td><strong>Due Date</strong></td>
+     </tr>
+     <tr>
+       <td>0</td>
+       <td>
+        <a href="https://github.com/CS601-F21/project0/blob/master/README.md">Project 0 - Warmup</a><br/>
+      </td>
+      <td>Thursday, September 2, 2021 - 9:55am</td>
+    </tr>
+     <tr>
+       <td>1</td>
+       <td>
+<!--         <a href="https://github.com/CS601-F21/project1/blob/master/README.md">Project 1 - Data Structures</a><br/>
+ -->        <a href="pending.html">Project 1 - Data Structures</a><br/>
+      </td>
+      <td>Thursday, September 16, 2021 - 9:55am</td>
+    </tr>
+     <tr>
+       <td>2</td>
+       <td>
+<!--         <a href="https://github.com/CS601-F21/projects/blob/master/project2.md">Project 2 - Concurrency</a><br/>
+ -->        <a href="pending.html">Project 2 - Concurrency</a><br/>
+      </td>
+      <td>Thursday, October 7, 2021 - 9:55am</td>
+    </tr>
+     <tr>
+       <td>3</td>
+       <td>
+<!--         <a href="https://github.com/CS601-F21/projects/blob/master/project3.md">Project 3 - HTTP/Sockets</a><br/>
+ -->        <a href="pending.html">Project 3 - HTTP/Sockets</a><br/>
+      </td>
+      <td>Thursday, November 4, 2021 - 9:55am</td>
+    </tr>
+     <tr>
+       <td>4</td>
+       <td>
+<!--         <a href="https://github.com/CS601-F21/projects/blob/master/project4.md">Project 4 - Web Application or Service</a><br/>
+ -->        <a href="pending.html">Project 4 - Web Application or Service</a><br/>
+      </td>
+      <td>Demonstration During Finals Week</td>
+    </tr>
+     <tr>
+       <td>Side Project</td>
+       <td>
+<!--         <a href="https://github.com/CS601-F21/projects/blob/master/sideproject.md">Side Project</a><br/>
+ -->        <a href="pending.html">Side Project</a><br/>
+      </td>
+      <td>Thursday, December 16, 2021 - 5pm</td>
+    </tr>
+  </tbody>
+</table>
 
+<h2>Labs/Exercises/Homework</h2>
+<i>Note: additional assignments may be added in this category.</i>
+
+<table class="table table-condensed" style="text-align:left;">
+  <tbody>
+    <tr>
+     <td width="10%"><strong>Assignment</strong></td>
+     <td><strong>Description</strong></td>
+     <td><strong>Due Date</strong></td>
+   </tr>
+   <tr>
+     <td>Homework 1</td>
+     <td>
+      <a href="">Survey</a><br/>
+    </td>
+    <td>Friday, August 27, 2021 - 5pm</td>
+  </tr>
+</tbody>
+</table>
+<h2>Ungraded Practice</h2>
+
+<p>Start with the Practice assignment as it contains information about how to set up your development environment for this course.</p>
+
+<table class="table table-condensed" style="text-align:left;">
+  <tbody>
+    <tr>
+     <td width="10%"><strong>Assignment</strong></td>
+     <td><strong>Description</strong></td>
+     <td><strong>Due Date</strong></td>
+   </tr>
+   <tr>
+     <td>Easy</td>
+     <td>
+      <a href="https://github.com/CS601-F21/Practice">Practice</a><br/>
+    </td>
+    <td>None</td>
+  </tr>
+  <tr>
+   <td>CarDB</td>
+   <td>
+    <a href="https://github.com/CS601-F21/CarDBPractice">Car Database</a><br/>
+  </td>
+  <td>None</td>
+</tr>
+</tbody>
+</table>
+
+	<hr/><br/>
 </div>
