--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Home
 ---
 
 <div class="container">
-
+<br/>
 <h1 class="page-header">Principles of Software Development<br/>Fall 2021</h1>
-        
-	<hr/>
+<hr/>
+
 	<h4>Course Description</h4>
     <p>A study of software development. Software engineering principles and structured methods are discussed as a prelude to the focus on object-oriented approaches. All phases of the software lifecycle are covered, including analysis, design, implementation and testing, and maintenance. Other topics include user interface design and development, software reuse and the design of reusable software components, software patterns, and web-based client-server programming.
     </p>
@@ -16,6 +16,54 @@ title: Home
     <h4>Prerequisite</h4>
 
     <p>Experience with an object-oriented programming language.</p>    
+    <h4>Office Hour Schedule</h4>
+    <p>Additional hours to be announced.</p>
+    <table class="table table-condensed" 
+	style="text-align:left;">
+	<tbody>
+		<tr>
+			<td><strong>Day</strong></td>
+			<td><strong>Hours</strong></td>
+			<td><strong>Instructor</strong></td>
+			<td><strong>Location</strong></td>
+		</tr>
+<!-- 		<tr>
+			<td rowspan=2><strong>Monday</strong></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td rowspan=1><strong>Tuesday</strong></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr> -->
+		<tr>
+			<td ><strong>Wednesday</strong></td>
+			<td>1:30pm-3:00pm</td>
+			<td>Sami</td>
+			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
+		</tr>
+<!-- 		<tr>
+			<td><strong>Thursday</strong></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><strong>Friday</strong></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr> -->
+	</tbody>
+	</table>
 
 	<br/>
 	<h4>Practice Assignments</h4>
@@ -43,9 +91,8 @@ title: Home
         <li><a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Platform Download</a></li>
         <li><a href="https://www.codecademy.com/learn/learn-java">Code Academy</a></li>
         <li><a href="https://www.baeldung.com/java-tutorial">Baeldung Java Tutorials</a></li>
-<!--         <li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/Intro.md
-                ">Introductory Java Notes</a></li>
- -->
 	</ul>
+	<hr/>
+	<br/>
 
 </div>
