--- a/syllabus.html
+++ b/syllabus.html
@@ -4,9 +4,253 @@ title: Syllabus
 ---
 
 <div class="container">
+<br/>
+<h1 class="page-header">Syllabus<br/>Fall 2021</h1>        
+<hr/>
 
-<h1 class="page-header">Syllabus<br/>Fall 2021</h1>
-        
-	<br/>	
-	<p>Syllabus Pending</p>
+	<h3>Course Information</h3>
+	<p><strong>Class Meets:</strong><br/>
+	Section 01 - Tuesday and Thursday 9:55-11:40am online via Zoom (link available on Canvas)<br/>
+	Section 02 - Tuesday and Thursday 2:40-4:25pm in LS 307
+	</p>
+	<p><i>Students may only attend the section for which they are registered.</i></p>
+	<p><strong>Web Page:</strong><a href="https://cs601-f21.github.io/">https://cs601-f21.github.io/</a></p>
+
+	<h3>Instructor Information</h3>
+	 <p><strong>Name:</strong> Sami Rollins<br/>
+	 <strong>Email:</strong> srollins@cs.usfca.edu - Slack preferred<br/>
+ 	 <strong>Office:</strong> Harney Science Center, Room 404<br/>
+ 	 <strong>Hours:</strong> Wednesday 1:30-3:00pm and by appointment (additional hours to be announced)</p>
+
+
+ 	<h2>TA Information</h2>
+
+	<table class="table table-condensed" 
+  	style="text-align:left;">
+  	<tbody>
+    	<tr>
+      		<td><strong>TA</strong></td>
+      		<td><strong>Hours</strong></td>
+    	</tr>
+    	<tr>
+      		<td><strong>Nikhil Matta</strong></td>
+      		<td>Pending.</td>
+    	</tr>
+    	<tr>
+      		<td><strong>Berk Burak Tasdemir</strong></td>
+      		<td>Pending.</td>
+    	</tr>
+  	</tbody>
+	</table>
+
+	<h3>Course Prerequisites</h3>
+ 	<p>Experience with an object-oriented programming language.</p>
+
+ 	<h3>Course Materials</h3>
+ 	<p>There is no required textbook for this course.</p>
+
+ 	<p>Students may find the book <a href="http://www.saasbook.info/">Engineering Software as a Service</a> by Fox and Patterson helpful, though we will not cover all material in this text.</p>
+
+ 	<p>It is recommended that students new to Java have a Java reference book.</p>
+
+ 	<p>
+   	Links to online resources, including notes, code samples, and external resources, will be posted on the <a href="/schedule.html">Schedule</a> page. Make sure to check the schedule early and often.
+ 	</p>	
+
+ 	<h3>Course Announcements</h3> 
+
+ 	<p>Announcements will be posted in the CS 601 Slack team. Use your USF address to join the Slack team by visiting the following URL:
+ 	</p>
+ 	<p><a href="https://join.slack.com/t/slack-2pt3252/shared_invite/zt-u6mefse9-n4LwWIMh2bty7iRKC956LQ">CS 601 Slack</a></p>
+
+ 	<p>Students are responsible for staying current on all course announcements.</p>
+
+ 	<h3>Learning Outcomes</h3>     
+	<p>
+   	At the end of this course, successful students will be able to do all of the following:
+ 	</p>
+ 
+ 	<ul>
+  		<li>Independently design programs</li>
+  		<li>Produce professional-quality code</li>
+  		<li>Implement large programs</li>
+  		<li>Design and execute tests to identify software bugs</li>
+  		<li>Repair software bugs, redesigning and refactoring code when necessary</li>
+  		<li>Utilize, analyze, and critique code written by others</li>
+	</ul>
+
+	<p>Assessment of these outcomes will be done by a combination of quizzes, exams, labs, projects, and code review.</p>
+
+
+	<h3>Course Requirements</h3> 
+
+
+	<h4>Projects</h4>
+	<p>You will have six projects. As noted below, they will <i>not</i> be weighted equally. A demonstration and interactive grading session will be required for most projects. Projects will be graded both on functionality (correctness) as well as design. A correct solution may not earn full credit if it is poorly designed or inefficient. A project may only be submitted late in the case of an emergency verified by the dean's office.</p>
+
+	<h4>Project Resubmission</h4>
+	<p>A student may resubmit up to <b>two</b> out of the first four projects (Project 0, Project 1, Project 2, or Project 3) a maximum of one time. Project 4 and the Side Project are not eligible for resubmission. Resubmissions that meet the following criteria may earn additional credit for the <b>design</b> requirements:
+	<ul>
+		<li>The original submission earned full credit on <i>all</i> <b>functionality</b> requirements. A solution that did not meet all functionality requirements may not be resubmitted.</li>
+		<li>The student meets with the professor in advance of the resubmission for a code review.</li>
+		<li>The code review takes place no more than <i>one week</i> after the project grade has been released and the resubmission is submitted no more than <i>two weeks</i> after the project grade has been released. For example, if the project grade is released on October 19 then the code review must be completed by October 26 and the resubmission must be submitted by November 2.</li>
+		<li>The resubmission must meet all original functionality requirements to be eligible for additional credit.</li>
+	</ul>
+	</p>
+	<p>You are advised to think carefully about which projects you wish to resubmit. If, for example, you choose to resubmit Projects 0 and 1 then you will not be eligible for a resubmission of a later project. You are also advised to manage your time wisely. If you spend significant time revising Project 1 rather than completing Project 2 then you are likely to get behind and do poorly on Project 2.</p>
+
+	<h3>Exams</h3>
+	<p>You will have two exams. You are responsible for being present on the day of the exam.  Make-up exams will only be given in the event of an emergency verified by the dean's office.</p>
+
+	<h3>Labs, Quizzes, In-Class Exercises, Participation</h3>
+	<p>Additional programming labs may be assigned. In many cases you will have class time to work on these labs but they will need to be completed outside of class. </p>
+
+	<p>You are expected to attend class, participate in class discussion, and participate in online discussion on Slack. <i>Pop quizzes and in-class exercises/worksheets may be administered any time. If you are not in class on the day of the quiz or exercise you will be assigned a 0.</i></p>
+
+	<h3>Code Review</h3>
+	<p>Any student may be asked to come in for code review for any assignment. A student who does not meet with the instructor for a code review in a timely manner will be given a <strong>0</strong> on the assignment in question. A student who is unable to explain his/her code; answer the instructor's questions about his/her code; or reproduce his/her code as expected may receive a deduction of <i>up to</i> <strong>100%</strong>, resulting in a 0 on the assignment.</p>
+
+
+	<h3>Grade Breakdown</h3>
+
+	<table class="table table-condensed" 
+  	style="text-align:left;">
+  	<tbody>
+    	<tr>
+      		<td><strong>Requirement</strong></td>
+      		<td><strong>Percentage of Final Grade</strong></td>
+    	</tr>
+    	<tr>
+      		<td>Project 0 - Data Warmup</td>
+      		<td>5%</td>
+    	</tr>
+    	<tr>
+      		<td>Project 1 - Data Structures</td>
+      		<td>10%</td>
+    	</tr>
+	    <tr>
+    		<td>Project 2 - Concurrency</td>
+      		<td>10%</td>
+    	</tr>
+    	<tr>
+      		<td>Project 3 - HTTP/Networking</td>
+      		<td>10%</td>
+    	</tr>
+    	<tr>
+      		<td>Project 4 - Web Application</td>
+      		<td>10%</td>
+    	</tr>
+    	<tr>
+      		<td>Side Project</td>
+      		<td>5%</td>
+    	</tr>
+    	<tr>
+      		<td>Exam 1 - October 12, 2021</td>
+      		<td>20%</td>
+    	</tr>
+    	<tr>
+      		<td>Exam 2 - November 30, 2021</td>
+      		<td>20%</td>
+    	</tr>
+    	<tr>
+      	<td>Labs, Quizzes, In-Class Exercises, Participation</td>
+      		<td>10%</td>
+    	</tr>
+  	</tbody>
+	</table>
+
+	<h3>Letter Grades</h3> 
+	<p>Letter grades will be assigned according to the following scale:</p>
+
+
+	<table class="table table-condensed" style="text-align:left;">
+ 		<tr>
+  			<td>A+ ≥97%</td>
+  			<td>B+ ≥87%</td>
+  			<td>C+ ≥77%</td>
+		</tr>
+		<tr>
+		</tr>
+			<td>A ≥94%</td>
+			<td>B ≥84%</td>
+			<td>C ≥74%</td>
+		</tr>
+		<tr>
+  			<td>A- ≥90%</td>
+  			<td>B- ≥80%</td>
+  			<td>C- ≥70%</td>
+		</tr>
+		<tr>
+  		<td colspan="3">F < 70%</td>
+			</tr>
+	</table>
+
+	<p>For example, you will receive a C letter grade if your grade is greater than or equal to 74% and less than 77%. Please note this scale is subject to change. See the <a href="https://catalog.usfca.edu/content.php?catoid=35&navoid=8277">Graduate Student Regulations</a> for more information about letter grades and how they are translated into GPA.</p>
+
+	<h3>Attendance Policy</h3>
+	<p>Students are expected to be on-time to all classes. Attendance is mandatory for all exams, quizzes, labs, and exercises. Exam dates will be posted on the course <a href="/schedule.html">schedule</a>.</p>
+
+	<h3>Late Policy</h3>
+	<p>All deadlines are firm.</p>
+	<p>Exceptions to this policy are made only in the case of <i>verifiable</i> medical or family emergency. Extensions and makeup exams must be arranged <i>PRIOR</i> to the original deadline unless in case of extreme emergency (such as an emergency room visit).</p>
+
+	<h3>Academic Honesty</h3>
+
+	<p>All students are expected to know and adhere to the University of San Francisco's Academic Honor Code. Go to <a href="https://myusf.usfca.edu/academic-integrity/honor-code">https://myusf.usfca.edu/academic-integrity/honor-code</a> for details.</p>
+	<p>You must never represent another person’s work as your own.</p>
+	<p>Copying answers or code from other students or sources during a quiz, exam, or for a project or homework assignment is a violation of the university’s honor code.This includes copying code or other material from the web, and having anyone other than yourself complete your assignments. It also includes working too closely with another student. Collaboration or discussion that results in the same or very similar code indicates that you have not placed enough independent work into your solution and is a violation of the honor code.</p>
+	<p>Flagrant or repeat violations of the honor code will result in an F in the course, a report to the University Academic Integrity Committee, and a report to the Dean.</p>
+	<p>At the discretion of the instructor, a less severe penalty may be imposed for minor or first offenses. This is at the sole discretion of the instructor and any violation may result in an F in the course.</p>
+	<p>Examples of honor code violations include but are not limited to:</p>
+	<ul>
+ 		<li>Giving your code to another student.</li>
+ 		<li>Submitting code written by anyone other than yourself as your own.</li>
+ 		<li>Copying text from the web.</li>
+ 		<li>Discussing implementation details of a solution with another student.</li>
+ 		<li>Discussing code-specific details of a solution with another student.</li>    	    
+	</ul>
+
+
+	<hr/>
+	<h3>University Policies</h3>
+
+	<h4>Credit-hour Policy</h4>
+	<p>One unit of credit in lecture, seminar, and discussion work approximates one hour of direct faculty instruction (or 50 minutes plus a break) and a minimum of two hours of out-of-class student work per week through one 15-week semester. For further details, see USF’s Credit Hour Policy.</p>
+	
+	<h4>Students with Disabilities</h4>
+	<p>The University of San Francisco is committed to providing equal access to students with disabilities. If you are a student with a disability, or if you think you may have a disability, please contact Student Disability Services (SDS) at sds@usfca.edu or (415) 422-2613, to speak with a disability specialist. (All communication with SDS is private and confidential.) If you are determined eligible for accommodations, please request that your accommodation letter be sent to me as soon as possible; students are encouraged to contact SDS at the beginning of the semester, as accommodations are not retroactive. Once I have been notified by SDS of your accommodations we can discuss your accommodations and ensure your access to this class or clinical setting. For more information please visit the SDS website: https://www.usfca.edu/student-disability-services.</p>
+
+	<h4>Behavioral Expectations</h4>
+	<p>All students are expected to behave in accordance with the Student Conduct Code and other University policies (see the USF <a href="https://myusf.usfca.edu/fogcutter">Fogcutter</a>). Students whose behavior is disruptive or who fail to comply with the instructor may be dismissed from the class for the remainder of the class period and may need to meet with the instructor or Dean prior to returning to the next class period. If necessary, referrals may also be made to the Student Conduct process for violations of the Student Conduct Code.</p>
+
+	<h4>Academic Integrity</h4>
+	<p>As a Jesuit institution committed to cura personalis—the care and education of the whole person—USF has an obligation to embody and foster the values of honesty and integrity. USF upholds the standards of honesty and integrity from all members of the academic community. All students are expected to know and adhere to the <a href="http://myusf.usfca.edu/academic-integrity/">University's Honor Code.</a>
+
+	<ul>
+		<li>Plagiarism -- intentionally or unintentionally representing the words or ideas of another person as your own; failure to properly cite references; manufacturing references.</li>
+		<li>Working with another person when independent work is required.</li>
+		<li>Submission of the same paper in more than one course without the specific permission of each instructor.</li>
+		<li>Submitting a paper written by another person or obtained from the internet.</li>
+	</ul>
+	</p>
+
+	<h4>Counseling and Psychological Services</h4>
+	<p>Counseling and Psychological Services (CAPS) is a great source of support for issues of sadness, anxiety, loneliness, college adjustment, relationship struggles, and others not requiring medical intervention. CAPS offers online workshop series open to all students; consultations and referrals; and extensive <a href="https://myusf.usfca.edu/caps">website resources</a>. In addition, CAPS All Hours “warmline” can be contacted by calling (855) 531-0761 or students can use the peer-led Crisis Textline by texting HOME to 741741. CAPS also offers remote individual and group teletherapy to students residing within California. (State regulations prevent provision of therapy across state lines.) The student may choose to talk either by video or telephone and can engage in Single Session Therapy (SST), brief ongoing therapy, or group therapy. There are no fees for services. Please call (415) 422-6352 to make an appointment. Visit <a href="https://myusf.usfca.edu/caps">usfca.edu/caps</a> for more details. Students seeking off campus mental health services can also receive information and support from Case Management (part of the Office of the Dean of Students); visit <a href="https://myusf.usfca.edu/dean-of-students/ocrs">https://myusf.usfca.edu/dean-of-students/ocrs</a> for further information.</p>
+
+	<h4>Confidentiality, Mandatory Reporting, and Sexual Assaults</h4>
+	<p>As instructors, one of our responsibilities is to help create a safe learning environment on our campus. We also have a mandatory reporting responsibility related to our role as faculty. We are required to share information regarding sexual misconduct or information about a crime that may have occurred on USF’s campus with the University. Here are some useful resources related to sexual misconduct:
+
+	<ul>
+		<li>To report any sexual misconduct, students may visit the Title IX Coordinator (UC 5th floor) or see many other options by visiting <a href="http://usfca.edu/student_life/safer">usfca.edu/student_life/safer</a>.</li>
+		<li>Students may speak to someone confidentially or report a sexual assault confidentially by contacting Counseling and Psychological Services at (415) 422-6352.</li>
+		<li>To find out more about reporting a sexual assault and resources at USF, visit USF's Callisto website <a href="http://usfca.callistocampus.org/">http://usfca.callistocampus.org</a>.</li>
+		<li>For an off-campus resource, contact San Francisco Women Against Rape (SFWAR) at (415) 647-7263 (<a href="http://www.sfwar.org/">http://www.sfwar.org/</a>).</li>
+	</ul>
+	</p>
+
+	<h4>Learning, Writing, and Speaking Centers</h4>
+	<p>The Learning, Writing, and Speaking Centers at USF provide individualized support to assist you in better understanding course material and to aid you on your path to success. Services are free and include one-on-one tutoring, group tutoring, and one-on-one Academic Skills Coaching appointments to discuss effective study strategies. The Learning Center supports over 80 courses each semester. The Writing Center helps students develop writing skills in rhetoric, organization, style, and structure, through one-on-one interactive conferences. The Speaking Center helps students prepare for public speaking - including speeches, oral presentations, team presentations, and visual aid demonstrations. International students may also contact the Centers to learn more about communicating with professors and general academic study skills. The Learning, Writing, and Speaking Centers are located on the Lower Level of Gleeson Library. Please contact them at (415) 422-6713 for further assistance or visit <a href="https://myusf.usfca.edu/lwsc">https://myusf.usfca.edu/lwsc</a> to make an appointment.</p>
+
+	<hr/>
+	<br/>
 </div>
