update slack join link

--- a/syllabus.html
+++ b/syllabus.html
@@ -61,7 +61,7 @@ title: Syllabus
 
  	<p>Announcements will be posted in the CS 601 Slack team. Use your USF address to join the Slack team by visiting the following URL:
  	</p>
- 	<p><a href="https://join.slack.com/t/slack-2pt3252/shared_invite/zt-u6mefse9-n4LwWIMh2bty7iRKC956LQ">CS 601 Slack</a></p>
+ 	<p><a href="https://join.slack.com/t/cs601-f21/signup">CS 601 Slack</a></p>
 
  	<p>Students are responsible for staying current on all course announcements.</p>
 
