--- a/schedule.html
+++ b/schedule.html
@@ -34,7 +34,7 @@ title: Schedule
 				<a href="https://martinfowler.com/">Martin Fowler</a><br/> -->
 			</td>				
 			<td>
-				<strong>Due Friday - 5pm</strong> - <a href="">Homework 0 Survey Form</a><br/>
+				<strong>Due Friday - 5pm</strong> - <a href="https://forms.gle/nkFqo7eMxoWHdekz7">Homework 0 Survey Form</a><br/>
 			</td>
 		</tr>
 		<tr>
