--- a/assignments.html
+++ b/assignments.html
@@ -80,7 +80,7 @@ title: Assignments
    <tr>
      <td>Homework 1</td>
      <td>
-      <a href="">Survey</a><br/>
+      <a href="https://forms.gle/nkFqo7eMxoWHdekz7">Survey</a><br/>
     </td>
     <td>Friday, August 27, 2021 - 5pm</td>
   </tr>
