--- a/schedule.html
+++ b/schedule.html
@@ -28,10 +28,10 @@ title: Schedule
  				<br/>
 			</td>
 			<td>
-<!-- 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/Advanced.md">Java Notes</a><br/>
+				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/javaintro.md">Java Notes and grep Exercise</a><br/>
+				<a href="https://www.atlassian.com/git/tutorials">git Tutorials</a><br/>
+				<a href="https://martinfowler.com/">Martin Fowler</a><br/>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/selftest.md">Java Self Test</a><br/>
-				<a href="https://help.github.com/articles/git-and-github-learning-resources/">Github resources</a><br/>
-				<a href="https://martinfowler.com/">Martin Fowler</a><br/> -->
 			</td>				
 			<td>
 				<strong>Due Friday - 5pm</strong> - <a href="https://forms.gle/nkFqo7eMxoWHdekz7">Homework 0 Survey Form</a><br/>
