add office hours

--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@ title: Home
 			<td></td>
 			<td></td>
 		</tr>
-		<tr>
+ -->		<tr>
 			<td rowspan=1><strong>Tuesday</strong></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr> -->
+			<td>5:15pm &dash; 6:15pm</td>
+			<td>Sami</td>
+			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
+		</tr>
 		<tr>
 			<td ><strong>Wednesday</strong></td>
-			<td>1:30pm-3:00pm</td>
+			<td>1:30pm &dash; 3:00pm</td>
+			<td>Sami</td>
+			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
+		</tr>
+		<tr>
+			<td><strong>Thursday</strong></td>
+			<td>9:15am &dash; 9:45am</td>
 			<td>Sami</td>
 			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
 		</tr>
 <!-- 		<tr>
-			<td><strong>Thursday</strong></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
 			<td><strong>Friday</strong></td>
 			<td></td>
 			<td></td>
 			<td></td>
-		</tr> -->
-	</tbody>
+		</tr>
+ -->	</tbody>
 	</table>
 
 	<br/>
