--- a/syllabus.html
+++ b/syllabus.html
@@ -20,7 +20,7 @@ title: Syllabus
 	 <p><strong>Name:</strong> Sami Rollins<br/>
 	 <strong>Email:</strong> srollins@cs.usfca.edu - Slack preferred<br/>
  	 <strong>Office:</strong> Harney Science Center, Room 404<br/>
- 	 <strong>Hours:</strong> Wednesday 1:30-3:00pm and by appointment (additional hours to be announced)</p>
+ 	 <strong>Hours:</strong> Tuesday 5:15pm &dash; 6:15pm; Wednesday 1:30pm &dash; 3:00pm; Thursday 9:15am &dash; 9:45am and by appointment.</p>
 
 
  	<h2>TA Information</h2>
