adding week 1 notes/vids and side project

--- a/assignments.html
+++ b/assignments.html
@@ -28,7 +28,7 @@ title: Assignments
        <td>1</td>
        <td>
 <!--         <a href="https://github.com/CS601-F21/project1/blob/master/README.md">Project 1 - Data Structures</a><br/>
- -->        <a href="pending.html">Project 1 - Data Structures</a><br/>
+ -->        <font color="grey">Project 1 - Data Structures</font><br/>
       </td>
       <td>Thursday, September 16, 2021 - 9:55am</td>
     </tr>
@@ -36,7 +36,7 @@ title: Assignments
        <td>2</td>
        <td>
 <!--         <a href="https://github.com/CS601-F21/projects/blob/master/project2.md">Project 2 - Concurrency</a><br/>
- -->        <a href="pending.html">Project 2 - Concurrency</a><br/>
+ -->        <font color="grey">Project 2 - Concurrency</font><br/>
       </td>
       <td>Thursday, October 7, 2021 - 9:55am</td>
     </tr>
@@ -44,7 +44,7 @@ title: Assignments
        <td>3</td>
        <td>
 <!--         <a href="https://github.com/CS601-F21/projects/blob/master/project3.md">Project 3 - HTTP/Sockets</a><br/>
- -->        <a href="pending.html">Project 3 - HTTP/Sockets</a><br/>
+ -->        <font color="grey">Project 3 - HTTP/Sockets</font><br/>
       </td>
       <td>Thursday, November 4, 2021 - 9:55am</td>
     </tr>
@@ -52,15 +52,14 @@ title: Assignments
        <td>4</td>
        <td>
 <!--         <a href="https://github.com/CS601-F21/projects/blob/master/project4.md">Project 4 - Web Application or Service</a><br/>
- -->        <a href="pending.html">Project 4 - Web Application or Service</a><br/>
+ -->        <font color="grey">Project 4 - Web Application or Service</font><br/>
       </td>
       <td>Demonstration During Finals Week</td>
     </tr>
      <tr>
        <td>Side Project</td>
        <td>
-<!--         <a href="https://github.com/CS601-F21/projects/blob/master/sideproject.md">Side Project</a><br/>
- -->        <a href="pending.html">Side Project</a><br/>
+          <a href="https://github.com/CS601-F21/Side-Project">Side Project</a><br/>
       </td>
       <td>Thursday, December 16, 2021 - 5pm</td>
     </tr>
