--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@ title: Schedule
 		<tr>
 			<td width="15%"><strong>Week</strong></td>
 			<td><strong>Topics</strong></td>
-			<td><strong>Code/Resources</strong></td>
+			<td><strong>Resources</strong><br/><small><i>Instructor videos require Canvas login</i></small></td>
 			<td><strong>Assignments Due</strong></td>
 		</tr>
 		<tr>
@@ -24,14 +24,24 @@ title: Schedule
 				<strong><span class="text-primary">Classes begin Tuesday.</span></strong><br/>
 <!-- 				<a href="https://docs.google.com/presentation/d/15egu-QOsG63owJSBmPNGpj-j-t6F-chXJzuCRs4P9dY/edit?usp=sharing">Introduction</a>
  -->			
- 				Introduction	
+ 				<a href="https://docs.google.com/presentation/d/1Bhim_CYnF5mYQmuzQAo8cH3IKCKrRrlpCuD-3kH8qhI/edit?usp=sharing">Introduction</a><br/>
+ 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/javaintro.md#excercise">grep Exercise</a><br/>
  				<br/>
 			</td>
 			<td>
-				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/javaintro.md">Java Notes and grep Exercise</a><br/>
-				<a href="https://www.atlassian.com/git/tutorials">git Tutorials</a><br/>
-				<a href="https://martinfowler.com/">Martin Fowler</a><br/>
-				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/selftest.md">Java Self Test</a><br/>
+				Notes and Videos<br/>
+				<ul>
+					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/javaintro.md">Java Notes</a></li>
+					<li><a href="https://usfca.instructure.com/files/68446096/download?download_frd=1">IntelliJ/Github Video</a><br/></li>	
+					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/datastructures.md">Data Structures Notes</a></li>
+					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/selftest.md">Java Self Test</a></li>
+				</ul>
+				External Links<br/>
+				<ul>
+					<li><a href="https://www.atlassian.com/git/tutorials">Atlassian git Tutorials</a></li>
+					<li><a href="https://martinfowler.com/">Martin Fowler</a></li>
+				</ul>
+				
 			</td>				
 			<td>
 				<strong>Due Friday - 5pm</strong> - <a href="https://forms.gle/nkFqo7eMxoWHdekz7">Homework 0 Survey Form</a><br/>
@@ -71,7 +81,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <a href="pending.html">Project 1</a><br/>
+				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 1</font><br/>
 			</td>
 		</tr>
 
@@ -102,7 +112,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <a href="pending.html">Project 2</a><br/>
+				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 2</font><br/>
 
 			</td>
 		</tr>
@@ -143,7 +153,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <a href="pending.html">Project 3</a><br/>				
+				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 3</font><br/>				
 			</td>
 		</tr>
 		<tr>
@@ -172,7 +182,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<a href="pending.html">Side Project suggested deadline</a><br/>
+				<a href="https://github.com/CS601-F21/Side-Project">Side Project suggested deadline</a><br/>
 			</td>
 		</tr>
 		<tr>
@@ -193,7 +203,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <a href="pending.html">Project 4 Checkpoint</a><br/>					
+				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 4 Checkpoint</font><br/>					
 			</td>
 		</tr>
 		<tr>
