modify vid link

--- a/schedule.html
+++ b/schedule.html
@@ -32,7 +32,7 @@ title: Schedule
 				Notes and Videos<br/>
 				<ul>
 					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/javaintro.md">Java Notes</a></li>
-					<li><a href="https://usfca.instructure.com/files/68446096/download?download_frd=1">IntelliJ/Github Video</a><br/></li>	
+					<li><a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github Video</a><br/></li>	
 					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/datastructures.md">Data Structures Notes</a></li>
 					<li><a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/selftest.md">Java Self Test</a></li>
 				</ul>
