update OH location

--- a/syllabus.html
+++ b/syllabus.html
@@ -20,6 +20,7 @@ title: Syllabus
 	 <p><strong>Name:</strong> Sami Rollins<br/>
 	 <strong>Email:</strong> srollins@cs.usfca.edu - Slack preferred<br/>
  	 <strong>Office:</strong> Harney Science Center, Room 404<br/>
+ 	 <i>Office hours will take place via Zoom.</i><br/>
  	 <strong>Hours:</strong> Tuesday 5:15pm &dash; 6:15pm; Wednesday 1:30pm &dash; 3:00pm; Thursday 9:15am &dash; 9:45am and by appointment.</p>
 
 
