--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ title: Home
 			<td><strong>Day</strong></td>
 			<td><strong>Hours</strong></td>
 			<td><strong>Instructor</strong></td>
-			<td><strong>Location</strong></td>
+			<td><strong>Location</strong><br/>
+				<i>Make sure to use the correct link!</i></td>
 		</tr>
 <!-- 		<tr>
 			<td rowspan=2><strong>Monday</strong></td>
@@ -38,24 +39,48 @@ title: Home
 			<td></td>
 			<td></td>
 		</tr>
- -->		<tr>
+ -->		
+ 		<tr>
+			<td rowspan=1><strong>Monday</strong></td>
+			<td>9:00am &dash; 10:30am</td>
+			<td>Nikhil</td>
+			<td><a href="https://usfca.zoom.us/j/83747920217">Online via Zoom</a></td>
+		</tr>
+ 		<tr>
 			<td rowspan=1><strong>Tuesday</strong></td>
 			<td>5:15pm &dash; 6:15pm</td>
 			<td>Sami</td>
 			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
 		</tr>
 		<tr>
-			<td ><strong>Wednesday</strong></td>
+			<td rowspan=2><strong>Wednesday</strong></td>
+			<td>1:00pm &dash; 3:00pm</td>
+			<td>Berk</td>
+			<td><a href="https://usfca.zoom.us/j/87923699423">Online via Zoom</a></td>
+		</tr>
+		<tr>
 			<td>1:30pm &dash; 3:00pm</td>
 			<td>Sami</td>
 			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
 		</tr>
 		<tr>
-			<td><strong>Thursday</strong></td>
+			<td rowspan=1><strong>Thursday</strong></td>
 			<td>9:15am &dash; 9:45am</td>
 			<td>Sami</td>
 			<td><a href="https://usfca.zoom.us/j/81328665253?pwd=dUlVN21VNEQ0NVJ3WWtYaGZmSjJvdz09">Online via Zoom</a></td>
 		</tr>
+ 		<tr>
+			<td rowspan=2><strong>Friday</strong></td>
+			<td>9:00am &dash; 10:30am</td>
+			<td>Nikhil</td>
+			<td>CS Labs</td>
+		</tr>
+		<tr>
+			<td>1:00pm &dash; 2:00pm</td>
+			<td>Berk</td>
+			<td><a href="https://usfca.zoom.us/j/87923699423">Online via Zoom</a></td>
+		</tr>
+
 <!-- 		<tr>
 			<td><strong>Friday</strong></td>
 			<td></td>
