--- a/syllabus.html
+++ b/syllabus.html
@@ -35,11 +35,12 @@ title: Syllabus
     	</tr>
     	<tr>
       		<td><strong>Nikhil Matta</strong></td>
-      		<td>Pending.</td>
+      		<td>Monday (online) 9:00am &dash; 10:30am; <br/>Friday (in person) 9:00am &dash; 10:30am</td>
     	</tr>
     	<tr>
       		<td><strong>Berk Burak Tasdemir</strong></td>
-      		<td>Pending.</td>
+      		<td>Wednesday (online) 1:00pm &dash; 3:00pm;<br/>
+      		Friday (online) 1:00pm &dash; 2:00pm</td>
     	</tr>
   	</tbody>
 	</table>
