add java video and inheritance notes

--- a/schedule.html
+++ b/schedule.html
@@ -34,7 +34,8 @@ title: Schedule
 			<td>
 				<a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github</a><br/>
 				<a href="https://usfca.instructure.com/courses/1601365/pages/data-structures">Data Structures</a><br/>
-				<a href="https://usfca.instructure.com/courses/1601365/pages/data-formatting-and-gson">Data Formatting and Gson</a><br/>								
+				<a href="https://usfca.instructure.com/courses/1601365/pages/data-formatting-and-gson">Data Formatting and Gson</a><br/>
+				<a href="https://usfca.instructure.com/courses/1601365/pages/java-session">Java Session</a><br/>								
 			</td>
 			<td>
 				<a href="https://www.atlassian.com/git/tutorials">Atlassian git Tutorials</a><br/>
@@ -47,9 +48,8 @@ title: Schedule
 		<tr>
 			<td>2<br/>8/31-9/2</td>
 			<td>
-<!-- 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/datastructures.md">Data Structures</a><br/>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/inheritance.md">Inheritance</a><br/>
-				<a href="https://github.com/CS601-F18/notes/blob/master/lectures/inheritance.md">Inheritance Worksheet</a><br/>				 -->
+				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/inheritance.md">Inheritance Worksheet</a><br/>				
 			</td>
 			<td>
 				<!-- <a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github</a><br/> -->
