adding design patterns video

--- a/schedule.html
+++ b/schedule.html
@@ -50,9 +50,10 @@ title: Schedule
 			<td>
 				<a href="https://github.com/srollins/software-dev-materials/blob/master/notes/advanced/inheritance.md">Inheritance</a><br/>
 				<a href="https://github.com/CS601-F21/notes/blob/main/lectures/inheritance_worksheet.md">Inheritance Worksheet</a><br/>				
+				<a href="https://github.com/CS601-F21/code-examples/tree/main/DesignPatternsPartial">Design Patterns Code Example</a><br/>
 			</td>
 			<td>
-				<!-- <a href="https://usfca.instructure.com/courses/1601365/pages/intellij-and-github">IntelliJ/Github</a><br/> -->
+				<a href="https://usfca.instructure.com/courses/1601365/pages/design-patterns">Design Patterns</a><br/>
 			</td>			
 			<td>
 				<a href="https://www.baeldung.com/design-patterns-series">Baeldung Design Patterns Series</a><br/>
