--- a/assignments.html
+++ b/assignments.html
@@ -27,8 +27,8 @@ title: Assignments
      <tr>
        <td>1</td>
        <td>
-<!--         <a href="https://github.com/CS601-F21/project1/blob/master/README.md">Project 1 - Data Structures</a><br/>
- -->        <font color="grey">Project 1 - Data Structures</font><br/>
+        <a href="https://github.com/CS601-F21/Project1/blob/main/README.md">Project 1 - Data Structures</a><br/>
+        <!-- <font color="grey">Project 1 - Data Structures</font><br/> -->
       </td>
       <td>Thursday, September 16, 2021 - 9:55am</td>
     </tr>
