--- a/schedule.html
+++ b/schedule.html
@@ -88,7 +88,7 @@ title: Schedule
 			<td>
 			</td>
 			<td>
-				<strong>Due Thursday - 9:55am</strong> - <font color="grey">Project 1</font><br/>
+				<strong>Due Thursday - 9:55am</strong> - <a href="https://github.com/CS601-F21/Project1/blob/main/README.md">Project 1</a><br/>
 			</td>
 		</tr>
 
